@@ -6912,3 +6912,12 @@ M       html/vbm12.html
 
 ------------------------------------------------------------------------
 r701 | gaser | 2015-06-18 17:33:40
+
+M       CHANGES.txt
+M       cg_vbm_write.m
+M       html/vbm12.html
+
+Forgot to remove some debugging code in cg_vbm_write.m.
+
+------------------------------------------------------------------------
+r702 | gaser | 2015-06-18 17:36:48
